Customer Annotation Alignment Fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,7 +110,7 @@ a { text-decoration: none; color: black; font-family: 'Roboto', sans-serif; }
 
 .customer-dialog div { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column; flex-flow: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 2rem; max-width: 30rem; }
 
-.customer-dialog h1 { font-family: 'Roboto', sans-serif; }
+.customer-dialog h1 { font-family: 'Roboto', sans-serif; margin-top: 2rem; }
 
 .customer-dialog h4 { font-family: 'Roboto', sans-serif; color: #eaf0f1; margin-bottom: 1rem; font-weight: normal; }
 
