--- a/src/scss/_customer-overview.scss
+++ b/src/scss/_customer-overview.scss
@@ -27,6 +27,7 @@
 	}
 	h1 {
 		font-family: 'Roboto', sans-serif;
+		margin-top: 2rem;
 	}
 	h4 {
 		font-family: 'Roboto', sans-serif;
